docs: fix invisible color mode toggle button

--- a/packages/docs/.vuepress/assets/base/_overrides.scss
+++ b/packages/docs/.vuepress/assets/base/_overrides.scss
@@ -69,6 +69,10 @@ button {
   background-color: $gray-300;
 }
 
+.toggle-color-mode-button .icon {
+  color: $gray-300;
+}
+
 /**
  * Components
  */
